[build-system]
requires = ["flit_core >=3.2,<4","setuptools"]
build-backend = "flit_core.buildapi"

[project]
name = "gkbus"
authors = [{name = "Dante", email = "dante383@protonmail.com"}]
version = "0.4.1"
dynamic = ["description"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
readme = {file=["README.md"], content-type="text/markdown"}
