[build-system]
requires = ["flit_core >=3.2,<4","setuptools"]
build-backend = "flit_core.buildapi"

[project]
name = "gkbus"
readme = "README.md"
authors = [{name = "Dante", email = "dante383@protonmail.com"}]
version = "0.4.3"
dynamic = ["description"]
dependencies = ["scapy==2.5.0", "pyserial==3.5"]
