[build-system]
requires = ["flit_core >=3.2,<4","setuptools == 80.3.1"]
build-backend = "flit_core.buildapi"

[project]
name = "gkbus"
version = "0.4.74"
readme = "README.md"
authors = [{name = "Dante", email = "dante383@protonmail.com"}]
dynamic = ["description"]
dependencies = ["scapy==2.5.0", "pyserial==3.5"]

[project.optional-dependencies]
lint = [
  "ruff == 0.11.4",
  "mypy == 1.15.0",
]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "I",   # isort
    "ANN", # flake8 type annotations
    "RUF", # ruff-specific rules
]
fixable = ["ALL"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
disallow_untyped_defs = true
